[tool.poetry]
name = "gm-shield"
version = "0.1.0"
description = ""
authors = ["Vell <dagornet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.0"
loguru = "^0.5.3"
motor = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

